--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,12 @@
 		    <version>1.9.3</version>
 		</dependency>
 
-		
-		
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
